trybuild_tests/tests/trybuild/fail/fieldtype_union.stderr
error[E0252]: the name `FieldType` is defined multiple times
 --> tests/trybuild/fail/fieldtype_union.rs:3:5
  |
1 | use butane::FieldType;
  |     ----------------- previous import of the trait `FieldType` here
2 |
3 | use butane::FieldType;
  |     ^^^^^^^^^^^^^^^^^ `FieldType` reimported here
  |
  = note: `FieldType` must be defined only once in the type namespace of this module

error: Serde does not support derive for unions
  --> tests/trybuild/fail/fieldtype_union.rs:9:1
   |
 9 | / pub union MyUnion {
10 | |     int_val: i32,
11 | |     float_val: f32,
12 | | }
   | |_^

warning: unused import: `butane::FieldType`
 --> tests/trybuild/fail/fieldtype_union.rs:3:5
  |
3 | use butane::FieldType;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `MyUnion: serde::Serialize` is not satisfied
 --> tests/trybuild/fail/fieldtype_union.rs:8:10
  |
8 | #[derive(FieldType, Serialize, Deserialize)]
  |          ^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Serialize` is not implemented for `MyUnion`
 --> tests/trybuild/fail/fieldtype_union.rs:9:1
  |
9 | pub union MyUnion {
  | ^^^^^^^^^^^^^^^^^
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `MyUnion` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
  = note: required for `&MyUnion` to implement `Serialize`
note: required by a bound in `to_value`
 --> $CARGO/serde_json-$VERSION/src/value/mod.rs
  |
  | pub fn to_value<T>(value: T) -> Result<Value, Error>
  |        -------- required by a bound in this function
  | where
  |     T: Serialize,
  |        ^^^^^^^^^ required by this bound in `to_value`
  = note: this error originates in the derive macro `FieldType` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `deserialize` found for union `MyUnion` in the current scope
 --> tests/trybuild/fail/fieldtype_union.rs:8:10
  |
8 | #[derive(FieldType, Serialize, Deserialize)]
  |          ^^^^^^^^^ function or associated item not found in `MyUnion`
9 | pub union MyUnion {
  | ----------------- function or associated item `deserialize` not found for this union
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following traits define an item `deserialize`, perhaps you need to implement one of them:
          candidate #1: `Deserialize`
          candidate #2: `DeserializeSeed`
  = note: this error originates in the derive macro `FieldType` (in Nightly builds, run with -Z macro-backtrace for more info)
